fixed dark mode text

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,10 +10,11 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+
 }
 
 body {
@@ -29,5 +30,12 @@ body {
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    .bg-white {
+      background-color: rgb(214, 219, 220);
+      color: rgb(var(--foreground-rgb));
+    }
   }
 }
